--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
 
   <div class="form-container">
-    <h2>User Registration</h2>
+    <h2>New User Registration</h2>
 
     <form action="#" method="post">
       
