--- a/index01.html
+++ b/index01.html
@@ -1,176 +1,34 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Registration Form</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-    }
-    .form-container {
-      width: 400px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 5px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    .inline {
-      width: auto;
-      margin-right: 5px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px;
-      width: 100%;
-      background: #007bff;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-  </style>
+  <title>Simple Form</title>
 </head>
 <body>
 
-  <div class="form-container">
-    <h2>New User02 Registration</h2>
+  <h2>Contact Form</h2>
 
-    <form action="#" method="post">
-      
-      <label>Full Name
-        <input type="text" name="fullname" required>
-      </label>
+  <form action="#" method="post">
+    <label>
+      Name:
+      <input type="text" name="name" required>
+    </label>
+    <br><br>
 
-      <label>Email
-        <input type="email" name="email" required>
-      </label>
+    <label>
+      Email:
+      <input type="email" name="email" required>
+    </label>
+    <br><br>
 
-      <label>Password
-        <input type="password" name="password" required minlength="6">
-      </label>
+    <label>
+      Message:
+      <textarea name="message"></textarea>
+    </label>
+    <br><br>
 
-      <label>Gender</label>
-      <label><input class="inline" type="radio" name="gender" value="male"> Male</label>
-      <label><input class="inline" type="radio" name="gender" value="female"> Female</label>
-
-      <label>Country
-        <select name="country">
-          <option value="">Select country</option>
-          <option>USA</option>
-          <option>UK</option>
-          <option>Canada</option>
-        </select>
-      </label>
-
-      <label>
-        <input class="inline" type="checkbox" required>
-        I agree to the terms
-      </label>
-
-      <button type="submit">Register</button>
-    </form>
-  </div>
-
-</body>
-</html>
-=======
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Registration Form</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
-    }
-    .form-container {
-      width: 400px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 5px;
-    }
-    label {
-      display: block;
-      margin-top: 10px;
-    }
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-    }
-    .inline {
-      width: auto;
-      margin-right: 5px;
-    }
-    button {
-      margin-top: 15px;
-      padding: 10px;
-      width: 100%;
-      background: #007bff;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background: #0056b3;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="form-container">
-    <h2>User Registration</h2>
-
-    <form action="#" method="post">
-      
-      <label>Full Name
-        <input type="text" name="fullname" required>
-      </label>
-
-      <label>Email
-        <input type="email" name="email" required>
-      </label>
-
-      <label>Password
-        <input type="password" name="password" required minlength="6">
-      </label>
-
-      <label>Gender</label>
-      <label><input class="inline" type="radio" name="gender" value="male"> Male</label>
-      <label><input class="inline" type="radio" name="gender" value="female"> Female</label>
-
-      <label>Country
-        <select name="country">
-          <option value="">Select country</option>
-          <option>USA</option>
-          <option>UK</option>
-          <option>Canada</option>
-        </select>
-      </label>
-
-      <label>
-        <input class="inline" type="checkbox" required>
-        I agree to the terms
-      </label>
-
-      <button type="submit">Register</button>
-    </form>
-  </div>
+    <button type="submit">Submit</button>
+  </form>
 
 </body>
 </html>
